<resources>


    <!-- TO BE UPDATED EVERYTIME -->
    <string name="app_name">Truth Dare Questions</string>
    <string name="email_address">app@geekdashboard.com</string>

    <string name="website_description">Our mission is to deliver high quality tech news, tutorials and product reviews to over 1 million readers</string>
    <string name="facebook_page_url">https://www.facebook.com/geekdashboard.official</string>


    <!-- AdMob Constants -->
    <string name="AdMobAccountId"></string>
    <string name="homeBottom">ca-app-pub-3940256099942544/6300978111</string>
    <string name="article_bottom">ca-app-pub-3940256099942544/6300978111</string>
    <string name="cat_bottom">ca-app-pub-3940256099942544/6300978111</string>
    <string name="AdMobInterestial">ca-app-pub-3940256099942544/1033173712</string>


    <string name="search_website">Search %1$s</string>
    <string name="check_internet_connection">Check Internet Connection</string>
    <string name="api_loading_message">Please wait&#8230;</string>
    <string name="something_went_wrong">Something went wrong. Try again</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_latest_updates">Home</string>
    <string name="nav_bookmarks">Bookmarks</string>

    <string name="nav_about">About</string>
    <string name="nav_invite_friends">Invite Friends</string>
    <string name="no_internet_connection">Check your connection and try again.</string>
    <string name="no_internet_connection_message">Seems there is some problem with internet connectivity</string>
    <string name="no_internet_connection_button">Try Again</string>
    <string name="click_back_again">Click back again to close </string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_comment">Comment</string>
    <string name="menu_share">Share</string>
    <string name="menu_browser">Open in browser</string>
    <string name="menu_report_error">Report error</string>
    <string name="bookmark_removed">Removed from bookmarks</string>
    <string name="bookmark_added">Added to bookmarks</string>
    <string name="article_share">Hey! check this article about</string>
    <string name="share_to">Share via</string>
    <string name="subject">Howdy, I just read an article and it worth sharing with you</string>
    <string name="message">Hey, I\'m inviting you to try this Android app. You can get all latest tech news, mobile and app reviews and a lot of informative tech guides everyday.\n\nDownload Now: </string>
    <string name="google_play_url">https://play.google.com/store/apps/details?id=</string>
    <string name="no_browser_installed">No browser installed on your device</string>

    <string name="email_subject">Error in article</string>
    <string name="email_message">\n\n ---------------------- \n Add your message above this line \n\n</string>
    <string name="no_mailapp_found">No email apps found to handle your request</string>


    <string name="search_bookmarks">Search Bookmarks</string>

    <string name="about_get_in_text">Follow us</string>
    <string name="no_bookmarks">You haven\'t bookmarked anything yet</string>


    <string name="add_your_comment">Add your comment</string>
    <string name="empty_comment_not_allowed">You can not add an empty comment</string>
    <string name="comment_too_small">Comment length is less than 10 characters</string>
    <string name="commenet_added">Your comment is awaiting approval</string>
    <string name="about">About</string>
    <string name="open_link">Open Link</string>
    <string name="credits">Credits</string>

    <!-- ADMOB CONSENT START -->

    <string name="eu_consent_text_intro">We care about your privacy and data security. We keep the free version of this app by showing Ads</string>
    <string name="eu_consent_text">Our partners will collect data and use unique identifier on your device to show you ads.</string>
    <string name="eu_consent_question">Can we continue to use your data to show less relevant (non-personalised) ads to you?</string>
    <string name="eu_consent_no">Show ads that are less relevant</string>
    <string name="eu_consent_change_setting">You can change your choice anytime at "Settings - Ads Choice"</string>
    <string name="action_remove_ads">Continue without Ads</string>
    <string name="learn_how">Learn how we and our partners collect and use data</string>
    <string name="google_partners">Google and its partners:</string>
    <string name="privacy_policy_partners">Privacy Policies of our app and partners</string>

    <string name="summary_ad_choice">Choose Non-Personalised Ads or Remove Ads</string>
    <string name="key_ad_choice">key_ad_choice</string>
    <string name="title_ad_choice">Ads Choice</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_categories">Categories</string>
    <string name="search_categoris">Search Categories</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="read_more">Read More</string>
    <string name="article_link_copied_to_clipboard">Article Link Copied to Clipboard</string>
    <string name="posted_in">Posted In</string>
    <string name="to_do">to_do</string>
    <string name="no_results_found_for">No results found for \"</string>
    <string name="article_written_by">by</string>
    <string name="article_written_on">on</string>
    <string name="article">article</string>
    <string name="articles">articles</string>
    <string name="comments">Comments</string>
    <string name="comments_open">open</string>
    <string name="add_new_comment">Add new Comment</string>
    <string name="comments_disabled">Comments Disabled</string>
    <string name="comments_are_disabled_for_this_article">Comments are disabled for this article</string>
    <string name="name_cannot_be_blank">Name can not be left blank</string>
    <string name="email_cannot_be_blank">Email can not be left blank</string>
    <string name="enter_valid_email_adress">Enter valid email address</string>
    <string name="no_comments_yet_initiate_description">No Comments yet. Why don\'t you take the initiative?</string>
    <string name="related_articles">Related Articles</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="search">Search</string>

    <!-- ADMOB CONSENT START -->
</resources>
