<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_eu_consent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eu_consent_text_intro"
            android:textSize="15sp"
            android:paddingBottom="6dp"
            android:textColor="@color/colorMaterialBlack"
            android:textAlignment="center" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eu_consent_question"
            android:textSize="19sp"
            android:paddingBottom="6dp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/default_margin_half"
            android:layout_marginBottom="@dimen/default_margin_half"
            android:textColor="@color/colorMaterialBlack"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eu_consent_text"
            android:textSize="14sp"
            android:paddingBottom="6dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/learn_how"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_how"
            android:textSize="14sp"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textStyle="bold"
            android:background="?android:selectableItemBackground"/>


        <Button
            android:id="@+id/btn_eu_consent_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eu_consent_no"
            android:layout_marginTop="16dp"
            android:foreground="?android:selectableItemBackground"
            android:background="@drawable/button_border"
            android:textColor="@color/colorPrimaryDark"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />

        <Button
            android:id="@+id/btn_eu_consent_remove_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_remove_ads"
            android:foreground="?android:selectableItemBackground"
            android:background="@drawable/button_border"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="16dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eu_consent_change_setting"
            android:textSize="14sp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/default_margin"/>

    </LinearLayout>

</ScrollView>