<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@color/default_white"
    android:id="@+id/root">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.Light">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:background="@color/default_white"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swipe_refresh_layout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/rootView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewArticleTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textColor="#333"
                    android:padding="@dimen/activity_horizontal_margin"/>

                <TextView
                    android:id="@+id/published_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimaryTextLight"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:fontFamily="sans-serif"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/imageViewFeaturedImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/to_do"
                    android:scaleType="centerCrop" />

               <WebView
                   android:id="@+id/webViewContent"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="8dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/article_posted_in_layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:gravity="center"
                        android:id="@+id/article_posted_in_text"
                        android:text="@string/posted_in"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:padding="@dimen/default_margin_half"
                        android:layout_toLeftOf="@+id/article_posted_in_button"
                        android:layout_toStartOf="@+id/article_posted_in_button" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/article_posted_in_button"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/default_margin_half"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/default_margin_half" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/related_posts_layout"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:text="@string/related_articles"
                        android:textStyle="bold"
                        android:padding="@dimen/default_margin_half"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:id="@+id/related_posts_category_name"
                        android:paddingBottom="@dimen/default_margin_half"
                        android:paddingStart="@dimen/default_margin_half"
                        android:paddingEnd="@dimen/default_margin_half"/>

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/related_posts_recycler_view"/>
                </LinearLayout>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

    <com.google.android.gms.ads.AdView
        android:layout_gravity="bottom|center_horizontal"
        android:visibility="gone"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/article_bottom"/>

</android.support.design.widget.CoordinatorLayout>